@@ -53,6 +53,7 @@ typedef enum
   UserEvent = 0x09000,
   WandEvent = 0x10000,
   X11Event = 0x20000,
+  AccelerateEvent = 0x40000,
   AllEvents = 0x7fffffff
 } LogEventType;
 
